--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,11 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation "com.android.support:support-fragment:26.1.0"
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.2.1'
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
     compile 'com.jude:easyrecyclerview:4.4.2'
     compile 'com.jude:rollviewpager:1.2.9'
+    compile 'com.github.bluejamesbond:textjustify-android:2.1.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
