--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".scan.ScanActivity">
 
         </activity>
+        <activity android:name=".views.ArticleActivity">
+
+        </activity>
     </application>
 
 </manifest>
